forced scroll bar to prevent layout shifting

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,3 +24,7 @@
     border-bottom: 1px solid #ddd;
     padding: 10px;
 }
+
+html {
+    overflow-y: scroll;
+}
